--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html {
+  background-color: #111111;
+}
+div{
+  color: white;
 
+}
