--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px; /* roundness of the scroll thumb */
   border: 3px solid var(--highlight); /* creates padding around scroll thumb */
 }
+
+a {
+  color: white;
+}
+
+.link {
+  color: var(--text);
+}
